--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,48 +1,54 @@
-.contact{
-    display: flex; 
+.contact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8rem;
+  color: #fff;
+  .heading {
+    margin-top: -1rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin-top: 8rem;
-    color: #fff;
-    .heading{
-        margin-top: -1rem;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
+    text-align: center;
 
-        .text{
-            font-size: 1.8rem;
-            font-weight: bold;
-            margin-bottom: 1rem;
-        }
-        .icon{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 5rem;
-            width: 80%;
-
-
-            a{
-                text-decoration: none;
-                height: 3rem;
-                font-size: 2rem;
-                color: #fff;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-            
-        }
-        .footer{
-            height: 6rem;
-            
-            .footer_text{
-                color: gray;
-                padding-top: 2rem;
-            }
-        }
+    .text {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+      color: rgb(190, 184, 184);
     }
+    .icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 5rem;
+      width: 80%;
+
+      a {
+        text-decoration: none;
+        height: 3rem;
+        font-size: 2rem;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      a:hover {
+        background-color: #fff;
+        color: red;
+        width: 35px;
+        border-radius: 3px;
+        height: 1.5rem;
+      }
+    }
+    .footer {
+      height: 6rem;
+
+      .footer_text {
+        color: gray;
+        padding-top: 2rem;
+      }
+    }
+  }
 }
