--- a/src/components/Projects/Project.scss
+++ b/src/components/Projects/Project.scss
@@ -50,7 +50,9 @@
       box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
       transition: all 0.3s ease-in-out;
       cursor: pointer;
-
+      @media (max-width: 767px) {
+        width: 75%;
+      }
       a {
         color: #000;
         text-decoration: none;
