added live links

--- a/src/components/Projects/Project.scss
+++ b/src/components/Projects/Project.scss
@@ -76,7 +76,7 @@
       .live {
         margin-left: auto;
         margin-bottom: 10px;
-
+        text-decoration: underline;
         font-size: 1.1rem !important;
         font-weight: normal !important;
         color: red !important;
